--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "codeeditornew",
   "version": "0.1.0",
+   "homepage": "https://Pushpender1122.github.io/CodeEditor2.0",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.3"
   }
 }
